--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@ p.footer {
     }
     });
     }
-
+    else{
+      boot();
+    }
     }
 </script>
  <script type="text/javascript" charset="utf-8">
