--- a/Huyen_MergePlant_Unity_VN_verFix_160421.html
+++ b/Huyen_MergePlant_Unity_VN_verFix_160421.html
@@ -553,7 +553,7 @@ function showMyAd() {
         splash.style.display = 'block';
         cc.macro.CLEANUP_IMAGE_CACHE = true;
 
-        boot();
+        start();
     }
 
 
