--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ p.footer {
   left: 0;
   width: 100%;
   height: 100%;
-
+  background: #171717 url(./splash.png) no-repeat center;
   background-size: 40%;
 }
 
@@ -186,7 +186,7 @@ p.footer {
 
   <!-- //indexInternal -->
   <script type="text/javascript" charset="utf-8">
-   
+    {#indexInternal}
   </script>
 
   <!-- //cocosengine -->
